# CS-Ticket-Classification

./: .env.example  .gitignore  .gitlab-ci.yml  CONTEXT.md  Dockerfile  README.md  allowlistupdatefeature.md  pyproject.toml  testcase.md
doc/: CS_ticket_new_categorizations.xlsx  Taxonomy.csv
docs/: design.md  prd-phase2-learning-feedback.md  prd.md
docs/plans/: 2026-05-14-tier-classifier-improvements.md  2026-06-06-allowlist-training-feature.md  2026-06-06-allowlist-training-implementation-notes.md  2026-06-08-allowlist-training-fixes-notes.md  2026-06-08-allowlist-training-fixes.md  (+22 more)
k8s/: deploy.sh  sa.yaml
references/: README.md
scripts/: start-portal-drive.ps1
tests/: conftest.py  test_allowlist_promote.py  test_allowlist_session.py  test_allowlist_training.py  test_batch_allowlist_analysis.py  test_classifier_rules.py  test_classify.py  test_drive_live_config.py  test_drive_upload.py  test_feedback_mine.py  test_feedback_parse.py  test_feedback_promote.py  test_flatten.py  test_golden_classifier.py  test_pipeline.py  test_portal.py  test_portal_layout.py  test_portal_learn.py  test_portal_learn_html.py  test_portal_stats.py  test_portal_ticket_preview.py  test_portal_training.py  test_portal_trends.py  test_rule_coverage.py  test_rule_generator.py  test_run_metadata.py  test_runtime_config.py  test_satisfaction.py  test_taxonomy.py  test_tbc_trends.py  test_thread_enrich.py
tools/: audit_classifier.py  batch_allowlist_compare.py  build_training_test_upload.py  resolve_live_folder.py  run_allowlist_test.py  tbc_trend_report.py  tbc_trend_snapshot.py
(+63 files in other folders)
