[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs-tickets"
version = "0.1.0"
description = "Zendesk export to SCMP master sheet rows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
portal = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart",
  "google-api-python-client>=2.100",
  "google-auth>=2.29",
]

[project.scripts]
cs-tickets-pipeline = "cs_tickets.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cs_tickets = ["static/*.css", "static/*.js", "classifier_rules.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
